--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 page-home {
 
 }
+
+.listTitle
+{
+    background-color : #58B43F;
+    color : #ffffff !important;
+    box-shadow : 0px 6px 10px #888888;
+}
