--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,57 +1,20 @@
 page-home {
-    .bg-image {
-        background-image: url('../../assets/imgs/presto-background.png');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-    }
+  .bg-image {
+      background-image: url('../../assets/imgs/presto-background.png');
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+  }
 }
 
-// .listTitle
-// {
-//     background-color : #58B43F;
-//     color : #ffffff !important;
-//     box-shadow : 0px 6px 10px #888888;
-// }
-
-.logoPresto {
-    padding-top: 5%;
-    padding-left: 15%;
-    padding-right: 15%;
+.buttonAppHome {
+  margin-bottom: 10%;
+  border-radius: 10px;
+  background: #c1272d;
+  margin-left: 12.5%;
+  width: 75%;
 }
 
-.inputApp {
-    margin-bottom: 2%;
-    border-radius: 10px;
-}
-
-.buttonGoogle {
-    margin-bottom: 2%;
-    border-radius: 10px;
-    background: #358BF0;
-    width: 100%;
-}
-
-.buttonFacebook {
-    margin-bottom: 2%;
-    border-radius: 10px;
-    background: #1777f1;
-    width: 100%;
-}
-
-.buttonApp {
-    margin-bottom: 2%;
-    border-radius: 10px;
-    background: #c1272d;
-    margin-left: 25%;
-    width: 50%;
-}
-
-.iconButton {
-    height: 27px;
-    width: 27px;
-}
-
-.linkApp {
-    color: #3C5A99;
+.icon {
+  margin-left: 10%;
 }
