Pequenas atualizações da parte visual das páginas

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -8,13 +8,18 @@ page-home {
 }
 
 .buttonAppHome {
-  margin-bottom: 10%;
   border-radius: 10px;
   background: #c1272d;
-  margin-left: 12.5%;
+  margin: 40px auto 0 12.5%;
   width: 75%;
 }
 
-.icon {
-  margin-left: 10%;
+.footer-icon {
+  color: aliceblue;
+  margin: auto auto auto 30px;
+}
+
+.footer-icon-conta {
+  color: aliceblue;
+  margin: auto auto auto 240px;
 }
