--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -11,3 +11,20 @@ page-register {
   color: #c1272d;
   font-weight: bold;
 }
+
+.buttonAppHome {
+  border-radius: 10px;
+  background: #c1272d;
+  margin: 40px auto 0 12.5%;
+  width: 75%;
+}
+
+.footer-icon {
+  color: aliceblue;
+  margin: auto auto auto 30px;
+}
+
+.footer-icon-conta {
+  color: aliceblue;
+  margin: auto auto auto 240px;
+}
