--- a/src/pages/login-qrcode/login-qrcode.scss
+++ b/src/pages/login-qrcode/login-qrcode.scss
@@ -31,3 +31,20 @@ page-login-qrcode {
   padding: 2%;
   border-radius: 10px;
 }
+
+.buttonAppHome {
+  border-radius: 10px;
+  background: #c1272d;
+  margin: 40px auto 0 12.5%;
+  width: 75%;
+}
+
+.footer-icon {
+  color: aliceblue;
+  margin: auto auto auto 30px;
+}
+
+.footer-icon-conta {
+  color: aliceblue;
+  margin: auto auto auto 240px;
+}
