--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -14,10 +14,13 @@ page-login {
 //     box-shadow : 0px 6px 10px #888888;
 // }
 
+.titlePresto {
+    height: 50px;
+    padding: 5px 0 5px 70px;
+}
+
 .logoPresto {
-    padding-top: 5%;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding: 5% 15% 0 15%;
 }
 
 .inputApp {
